Fix Wrap Cards

--- a/src/assets/style/style_components/_appMain.scss
+++ b/src/assets/style/style_components/_appMain.scss
@@ -9,12 +9,13 @@ main {
 
         .card {
             width: calc(100%/3 - 10px);
-            margin: 20px 5px;
+            margin: 20px 10px;
             position: relative;
+            width: 380px;
 
             .card-img {
                 position: relative;
-                width: 380px;
+                width: 100%;
 
                 .first-img {
                     position: absolute;
